# picam360-server

./: .gitignore  .gitmodules  .project  CMakeLists.txt  Copyright.txt  README.md  README.rst  alsaaudio.js  app.js  arm_test.js  config.json.tmp  level_test.js  openpilot.js  package.json  proxy.js  proxy_test.js  rtcp.js  rtp.js  signaling.js  sinwaveaudio.js
certs/aws_iot/: .gitignore
glsl/: fragshader.glsl
openpilot_definitions/: README.md  accelgyrosettings.json  accelsensor.json  accelstate.json  accessorydesired.json  actuatorcommand.json  actuatordesired.json  actuatorsettings.json  airspeedsensor.json  airspeedsettings.json  airspeedstate.json  altitudefiltersettings.json  altitudeholdsettings.json  altitudeholdstatus.json  attitudesettings.json  attitudesimulated.json  attitudestate.json  auxmagsensor.json  auxmagsettings.json  barosensor.json  callbackinfo.json  cameradesired.json  camerastabsettings.json  debuglogcontrol.json  debuglogentry.json  debuglogsettings.json  debuglogstatus.json  ekfconfiguration.json  ekfstatevariance.json  faultsettings.json  firmwareiapobj.json  fixedwingpathfollowersettings.json  fixedwingpathfollowerstatus.json  flightbatterysettings.json  flightbatterystate.json  flightmodesettings.json  flightplancontrol.json  flightplansettings.json  flightplanstatus.json  flightstatus.json  (+65 more)
plugins/: nekojara.js  omini_wheel.js  omni_laser.js  omni_lazer.js  omni_wheel.js  usvc.js  usvc_50w.js
plugins/usv/: cron.conf  crontab.conf  usvc_50w.js  validate_gps.sh  validate_network.sh  validateif.sh
plugins/usv/usvc_firmware/: init.txt  onna_test.txt  usvc_firmware.ino
plugins/usvc_firmware/: init.txt  onna_test.txt  transfer.sh  usvc_firmware.ino
setup/: install.sh.in  picam360-server.in  picam360-server.service  picam360-server.service.in
sh/: clean-up.sh  start-app.sh  start-uv4l.sh
www/: index.html
www/js/: index.js  omvc.js  omvr.min.js
